CacheStorage: include headers size when calculating space required for Cache entry

Currently, when creating a CacheStorage entry, only the size of the response's body is considered when estimating how much memory it will take. This allows putting an unlimited number of cache entries with empty bodies, which effectively allows a caller to write as much data as it wants, even when the quota has been met and the storage has been reported as full.

To address the issue, this change adds the size of the headers (skipping constant sized fields response_type or the time of the operation, since these alone can't be used to write unlimited amount of data) to the reported required safe space to store the entry. Note that the required safe space might be different than the space that the entry ends up using due to serialization, which happens at a later point. Along with this fix, this PR adds two new unit tests that cover this scenario.

Bug: 841568
Change-Id: I14cea40cc5f52d75d95f07c348acc557a37f9c55
Reviewed-on: https://chromium-review.googlesource.com/c/1444706
Auto-Submit: Erik Anderson <Erik.Anderson@microsoft.com>
Commit-Queue: Erik Anderson <Erik.Anderson@microsoft.com>
Reviewed-by: Ben Kelly <wanderview@chromium.org>
Cr-Commit-Position: refs/heads/master@{#627748}
Former-commit-id: ff1050bb25611aed98e6402902eb552746e1c455